bluec-tests/tests/valid/typedef/multiple1.c
int main(void) {
    typedef int foo;
    typedef int bar;
    typedef int baz;
    foo a = 1;
    bar b = 2;
    baz c = 3;
    return a + b + c;
}
