bluec-tests/tests/invalid/types_longdouble/bad_exponent_suffix.c
int main(void)
{
    long double foo = 1E2x.L;
}